acrescentada uma nova página html com detail

--- a/base_templates/global/partials/recipes.html
+++ b/base_templates/global/partials/recipes.html
@@ -39,9 +39,9 @@
                     </div>
                 </div>
                 <footer class="recipe-footer">
-                        <a class="recipe-read-more button button-dark button-full-width" href="/recipes/3/eye">
+                        <a class="recipe-read-more button button-dark button-full-width" href="/recipe/1"/>
                             <i class="fas fa-eye"></i>
                             <span>ver mais...</span>
                         </a>
-                </footer>
+                </footer>   
             </div>
