--- a/recipes/static/recipes/css/styles.css
+++ b/recipes/static/recipes/css/styles.css
@@ -170,6 +170,16 @@
             box-shadow: -10px 10px 20px rgba(0,0,0, 0.5);
         }
 
+        .main-content-detail .recipe-list-item {
+            max-width: 84rem;
+            margin: 0 auto;
+        }
+
+        .main-content-detail .recipe-list-item:hover {
+            transform: scale(1);
+            box-shadow: -5px 5px 15px rgba(0,0,0, 0.2);
+        }
+
         .recipe-author {
             padding-top: 2rem;
             display: flex;
