--- a/recipes/static/recipes/css/styles.css
+++ b/recipes/static/recipes/css/styles.css
@@ -170,6 +170,13 @@
             box-shadow: -10px 10px 20px rgba(0,0,0, 0.5);
         }
 
+        .main-content-detail {
+          max-width: 84rem;
+          margin: 0 auto;
+          padding: var(--spacing-gutter-medium);
+        }
+
+
         .main-content-detail .recipe-list-item {
             max-width: 84rem;
             margin: 0 auto;
