--- a/base_templates/global/partials/recipes.html
+++ b/base_templates/global/partials/recipes.html
@@ -1,6 +1,8 @@
 <div class="recipe recipe-list-item">
                 <div class="recipe-cover">
-                    <img src= "{{ recipe.cover.url }}"/>
+                    <a href="{% url 'recipes:recipe-detail' recipe.id %}">
+                        <img src= "{{ recipe.cover.url }}"/>
+                    </a>    
                 </div>
 
                 <div class="recipe-title-containe">
@@ -39,7 +41,7 @@
                     </div>
                 </div>
                 <footer class="recipe-footer">
-                        <a class="recipe-read-more button button-dark button-full-width" href="/recipe/1"/>
+                        <a class="recipe-read-more button button-dark button-full-width" href="{% url 'recipes:recipe-detail' recipe.id %}"/>
                             <i class="fas fa-eye"></i>
                             <span>ver mais...</span>
                         </a>
