--- a/base_templates/global/partials/recipes.html
+++ b/base_templates/global/partials/recipes.html
@@ -1,25 +1,31 @@
 <div class="recipe recipe-list-item">
+            {% if recipe.cover %}
                 <div class="recipe-cover">
                     <a href="{% url 'recipes:recipe-detail' recipe.id %}">
                         <img src= "{{ recipe.cover.url }}"/>
                     </a>    
                 </div>
-
+            {% endif %}        
                 <div class="recipe-title-containe">
                     <h2 class="recipe-title"> {{ recipe.title }} </h2>
                 </div>
-
+                
                 <div class="recipe-author">
                     <span class="recipe-author-item author">
                         <i class="fas fa-user"></i>
+            {% if recipe.author.first_name %}            
                         {{  recipe.author.first_name }} {{  recipe.author.last_name }}
+            {% else %}
+                        {{ recipe.author.username }}
+            {% endif %}            
                     </span>
+
                     <span class="recipe-author-item date">
                         <i class="fas fa-calendar-alt"></i>
                         {{ recipe.created_at|date:"d/m/Y" }} às {{ recipe.created_at|date:"H:i" }}
                     </span>
                     <span class="recipe-author-item category">
-                        <a href="recipes/category/cafe-da-manha/">
+                        <a href="{% url 'recipes:category' recipe.category.id %}">
                             <i class="fas fa-layer-group"></i>
                             <span>{{ recipe.category.name }}</span>
                         </a>
